--- a/index.html
+++ b/index.html
@@ -27,113 +27,115 @@
             <img class="header__logo" src="img/logo/logo.svg" alt="logo-ohmyfood" />
         </header>
 
-        <nav class="nav">
+        <main>
+            <nav class="nav">
 
-            <div class="nav__location">
-                <i class="nav__location-icon fas fa-map-marker-alt"></i>
-                <p class="nav__location-text bold">Paris, Belleville</p>
-            </div>
-
-            <div class="nav__header">
-                <h1 class="nav__header-title extra-bold">Réservez le menu qui vous convient</h1>
-                <p class="nav__header-paragraph">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <a class="btn medium" href="#resto-anchor">Explorez nos restaurants</a>
-            </div>
-
-            <div class="nav__function">
-                <h2 class="nav__function-title extra-bold">Fonctionnement</h2>
-                <div class="nav__function-info">
-                    <h3 class="nav__function-info-circle">1</h3>
-                    <i class="nav__function-info-icon fas fa-mobile-alt"></i>
-                    <p class="nav__function-info-text bold">Choisissez un restaurant</p>
+                <div class="nav__location">
+                    <i class="nav__location-icon fas fa-map-marker-alt"></i>
+                    <p class="nav__location-text bold">Paris, Belleville</p>
                 </div>
 
-                <div class="nav__function-info">
-                    <h3 class="nav__function-info-circle">2</h3>
-                    <i class="nav__function-info-icon fas fa-ellipsis-v"><i class="fas fa-bars"></i></i>
-                    <p class="nav__function-info-text bold">Composez votre menu</p>
+                <div class="nav__header">
+                    <h1 class="nav__header-title extra-bold">Réservez le menu qui vous convient</h1>
+                    <p class="nav__header-paragraph">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    <a class="btn medium" href="#resto-anchor">Explorez nos restaurants</a>
                 </div>
 
-                <div class="nav__function-info nav__function-info--darken">
-                    <h3 class="nav__function-info-circle">3</h3>
-                    <i class="nav__function-info-icon nav__function-info-icon--primary fas fa-store"></i>
-                    <p class="nav__function-info-text bold">Dégustez au restaurant</p>
+                <div class="nav__function">
+                    <h2 class="nav__function-title extra-bold">Fonctionnement</h2>
+                    <div class="nav__function-info">
+                        <h3 class="nav__function-info-circle">1</h3>
+                        <i class="nav__function-info-icon fas fa-mobile-alt"></i>
+                        <p class="nav__function-info-text bold">Choisissez un restaurant</p>
+                    </div>
+
+                    <div class="nav__function-info">
+                        <h3 class="nav__function-info-circle">2</h3>
+                        <i class="nav__function-info-icon fas fa-ellipsis-v"><i class="fas fa-bars"></i></i>
+                        <p class="nav__function-info-text bold">Composez votre menu</p>
+                    </div>
+
+                    <div class="nav__function-info nav__function-info--darken">
+                        <h3 class="nav__function-info-circle">3</h3>
+                        <i class="nav__function-info-icon nav__function-info-icon--primary fas fa-store"></i>
+                        <p class="nav__function-info-text bold">Dégustez au restaurant</p>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
 
-        <section class="resto" id="resto-anchor">
-            <h2 class="resto__title extra-bold">Restaurants</h2>
+            <section class="resto" id="resto-anchor">
+                <h2 class="resto__title extra-bold">Restaurants</h2>
 
-            <ul class="resto__list">
-                <li class="card">
-                    <a class="card__link" href="menu-laPaletteDuGout.html">
-                        <img class="card__link-img" src="img/resto/palette-du-gout.jpg" alt="palette-du-gout-img" />
-                        <div class="card__link-info">
-                            <div class="card__link-info-text">
-                                <h3 class="card__link-info-text-title extra-bold">La palette du goût</h3>
-                                <p class="card__link-info-text-location">Ménilmontant</p>
+                <ul class="resto__list">
+                    <li class="card">
+                        <a class="card__link" href="menu-laPaletteDuGout.html">
+                            <img class="card__link-img" src="img/resto/palette-du-gout.jpg" alt="palette-du-gout-img" />
+                            <div class="card__link-info">
+                                <div class="card__link-info-text">
+                                    <h3 class="card__link-info-text-title extra-bold">La palette du goût</h3>
+                                    <p class="card__link-info-text-location">Ménilmontant</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card__link-new">
-                            <h4 class="card__link-new-text">Nouveau</h4>
-                        </div>
-                    </a>
-                    <div class="heart">
-                        <i class="heart__outside far fa-heart"></i>
-                        <i class="heart__inside fas fa-heart"></i>
-                    </div>
-                </li>
-                <li class="card">
-                    <a class="card__link" href="menu-laNoteEnchantee.html">
-                        <img class="card__link-img" src="img/resto/note-enchantee.jpg" alt="note-enchantee-img" />
-                        <div class="card__link-info">
-                            <div class="card__link-info-text">
-                                <h3 class="card__link-info-text-title extra-bold">La note enchantée</h3>
-                                <p class="card__link-info-text-location">Charonne</p>
+                            <div class="card__link-new">
+                                <h4 class="card__link-new-text">Nouveau</h4>
                             </div>
+                        </a>
+                        <div class="heart">
+                            <i class="heart__outside far fa-heart"></i>
+                            <i class="heart__inside fas fa-heart"></i>
                         </div>
-                        <div class="card__link-new">
-                            <h4 class="card__link-new-text">Nouveau</h4>
-                        </div>
-                    </a>
-                    <div class="heart">
-                        <i class="heart__outside far fa-heart"></i>
-                        <i class="heart__inside fas fa-heart"></i>
-                    </div>
-                </li>
-                <li class="card">
-                    <a class="card__link" href="menu-aLaFrancaise.html">
-                        <img class="card__link-img" src="img/resto/a-la-francaise.jpg" alt="a-la-francaise-img" />
-                        <div class="card__link-info">
-                            <div class="card__link-info-text">
-                                <h3 class="card__link-info-text-title extra-bold">À la française</h3>
-                                <p class="card__link-info-text-location">Cité Rouge</p>
+                    </li>
+                    <li class="card">
+                        <a class="card__link" href="menu-laNoteEnchantee.html">
+                            <img class="card__link-img" src="img/resto/note-enchantee.jpg" alt="note-enchantee-img" />
+                            <div class="card__link-info">
+                                <div class="card__link-info-text">
+                                    <h3 class="card__link-info-text-title extra-bold">La note enchantée</h3>
+                                    <p class="card__link-info-text-location">Charonne</p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <div class="heart">
-                        <i class="heart__outside far fa-heart"></i>
-                        <i class="heart__inside fas fa-heart"></i>
-                    </div>
-                </li>
-                <li class="card">
-                    <a class="card__link" href="menu-leDeliceDesSens.html">
-                        <img class="card__link-img" src="img/resto/le-delice-des-sens.jpg" alt="le-delice-des-sens-img" />
-                        <div class="card__link-info">
-                            <div class="card__link-info-text">
-                                <h3 class="card__link-info-text-title extra-bold">Le délice des sens</h3>
-                                <p class="card__link-info-text-location">Folie-Méricourt</p>
+                            <div class="card__link-new">
+                                <h4 class="card__link-new-text">Nouveau</h4>
                             </div>
+                        </a>
+                        <div class="heart">
+                            <i class="heart__outside far fa-heart"></i>
+                            <i class="heart__inside fas fa-heart"></i>
                         </div>
-                    </a>
-                    <div class="heart">
-                        <i class="heart__outside far fa-heart"></i>
-                        <i class="heart__inside fas fa-heart"></i>
-                    </div>
-                </li>
-            </ul>
-        </section>
+                    </li>
+                    <li class="card">
+                        <a class="card__link" href="menu-aLaFrancaise.html">
+                            <img class="card__link-img" src="img/resto/a-la-francaise.jpg" alt="a-la-francaise-img" />
+                            <div class="card__link-info">
+                                <div class="card__link-info-text">
+                                    <h3 class="card__link-info-text-title extra-bold">À la française</h3>
+                                    <p class="card__link-info-text-location">Cité Rouge</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="heart">
+                            <i class="heart__outside far fa-heart"></i>
+                            <i class="heart__inside fas fa-heart"></i>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <a class="card__link" href="menu-leDeliceDesSens.html">
+                            <img class="card__link-img" src="img/resto/le-delice-des-sens.jpg" alt="le-delice-des-sens-img" />
+                            <div class="card__link-info">
+                                <div class="card__link-info-text">
+                                    <h3 class="card__link-info-text-title extra-bold">Le délice des sens</h3>
+                                    <p class="card__link-info-text-location">Folie-Méricourt</p>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="heart">
+                            <i class="heart__outside far fa-heart"></i>
+                            <i class="heart__inside fas fa-heart"></i>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </main>
 
         <footer class="footer">
             <img class="footer__logo" src="img/logo/logo-white.svg" alt="logo-ohmyfood" />
