--- a/menu-laPaletteDuGout.html
+++ b/menu-laPaletteDuGout.html
@@ -26,127 +26,129 @@
             <img class="header__logo" src="img/logo/logo.svg" alt="logo-ohmyfood" />
         </header>
 
-        <section class="menu">
-            <img class="menu__img" src="img/resto/palette-du-gout.jpg" alt="palette-du-gout-img" />
-            <div class="menu__shop">
-                <div class="shop-title">
-                    <h1 class="shop-title__text">La palette du goût</h1>
-                    <div class="heart heart--menu">
-                        <i class="heart__outside far fa-heart"></i>
-                        <i class="heart__inside fas fa-heart"></i>
+        <main>
+            <section class="menu">
+                <img class="menu__img" src="img/resto/palette-du-gout.jpg" alt="palette-du-gout-img" />
+                <div class="menu__shop">
+                    <div class="shop-title">
+                        <h1 class="shop-title__text">La palette du goût</h1>
+                        <div class="heart heart--menu">
+                            <i class="heart__outside far fa-heart"></i>
+                            <i class="heart__inside fas fa-heart"></i>
+                        </div>
                     </div>
+                    <div class="shop-group">
+                        <h2 class="shop-group__title">ENTRÉES</h2>
+                        <div class="shop-group__line"></div>
+                        <ul class="shop-group__list">
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Fricassé d'escargot</h3>
+                                    <p class="shop-card__text-info">Au piment d'espelette</p>
+                                </div>
+                                <h4 class="shop-card__price bold">25€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Foie gras de canard mi-cuit</h3>
+                                    <p class="shop-card__text-info">Et ses copeaux de truffe noire</p>
+                                </div>
+                                <h4 class="shop-card__price bold">35€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Oeuf au plat</h3>
+                                    <p class="shop-card__text-info">Assaisonné à la truffe sur lit de caviar</p>
+                                </div>
+                                <h4 class="shop-card__price bold">20€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="shop-group">
+                        <h2 class="shop-group__title">PLATS</h2>
+                        <div class="shop-group__line"></div>
+                        <ul class="shop-group__list">
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Filet de boeuf aux herbes</h3>
+                                    <p class="shop-card__text-info">Accompagné de sa ribambelle de légumes</p>
+                                </div>
+                                <h4 class="shop-card__price bold">40€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Parmentier de queue de boeuf</h3>
+                                    <p class="shop-card__text-info">À la truffe noire sur sa purée de panais</p>
+                                </div>
+                                <h4 class="shop-card__price bold">35€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Filet de turbot</h3>
+                                    <p class="shop-card__text-info">Aux agrumes</p>
+                                </div>
+                                <h4 class="shop-card__price bold">44€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="shop-group">
+                        <h2 class="shop-group__title">DESSERTS</h2>
+                        <div class="shop-group__line"></div>
+                        <ul class="shop-group__list">
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Paris-Brest</h3>
+                                    <p class="shop-card__text-info">Revisité</p>
+                                </div>
+                                <h4 class="shop-card__price bold">18€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Macaron au chocolat d'exception</h3>
+                                    <p class="shop-card__text-info">Et glace à la vanille de Madagascar</p>
+                                </div>
+                                <h4 class="shop-card__price bold">22€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Mousse au chocolat</h3>
+                                    <p class="shop-card__text-info">Au piment d'espelette</p>
+                                </div>
+                                <h4 class="shop-card__price bold">23€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <a class="btn btn--menu medium" href="#resto-anchor">Commander</a>
                 </div>
-                <div class="shop-group">
-                    <h2 class="shop-group__title">ENTRÉES</h2>
-                    <div class="shop-group__line"></div>
-                    <ul class="shop-group__list">
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Fricassé d'escargot</h3>
-                                <p class="shop-card__text-info">Au piment d'espelette</p>
-                            </div>
-                            <h4 class="shop-card__price bold">25€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Foie gras de canard mi-cuit</h3>
-                                <p class="shop-card__text-info">Et ses copeaux de truffe noire</p>
-                            </div>
-                            <h4 class="shop-card__price bold">35€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Oeuf au plat</h3>
-                                <p class="shop-card__text-info">Assaisonné à la truffe sur lit de caviar</p>
-                            </div>
-                            <h4 class="shop-card__price bold">20€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-group">
-                    <h2 class="shop-group__title">PLATS</h2>
-                    <div class="shop-group__line"></div>
-                    <ul class="shop-group__list">
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Filet de boeuf aux herbes</h3>
-                                <p class="shop-card__text-info">Accompagné de sa ribambelle de légumes</p>
-                            </div>
-                            <h4 class="shop-card__price bold">40€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Parmentier de queue de boeuf</h3>
-                                <p class="shop-card__text-info">À la truffe noire sur sa purée de panais</p>
-                            </div>
-                            <h4 class="shop-card__price bold">35€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Filet de turbot</h3>
-                                <p class="shop-card__text-info">Aux agrumes</p>
-                            </div>
-                            <h4 class="shop-card__price bold">44€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-group">
-                    <h2 class="shop-group__title">DESSERTS</h2>
-                    <div class="shop-group__line"></div>
-                    <ul class="shop-group__list">
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Paris-Brest</h3>
-                                <p class="shop-card__text-info">Revisité</p>
-                            </div>
-                            <h4 class="shop-card__price bold">18€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Macaron au chocolat d'exception</h3>
-                                <p class="shop-card__text-info">Et glace à la vanille de Madagascar</p>
-                            </div>
-                            <h4 class="shop-card__price bold">22€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Mousse au chocolat</h3>
-                                <p class="shop-card__text-info">Au piment d'espelette</p>
-                            </div>
-                            <h4 class="shop-card__price bold">23€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <a class="btn btn--menu medium" href="#resto-anchor">Commander</a>
-            </div>
-        </section>
+            </section>
+        </main>
 
         <footer class="footer">
             <img class="footer__logo" src="img/logo/logo-white.svg" alt="logo-ohmyfood" />
