--- a/menu-leDeliceDesSens.html
+++ b/menu-leDeliceDesSens.html
@@ -26,127 +26,129 @@
             <img class="header__logo" src="img/logo/logo.svg" alt="logo-ohmyfood" />
         </header>
 
-        <section class="menu">
-            <img class="menu__img" src="img/resto/le-delice-des-sens.jpg" alt="palette-du-gout-img" />
-            <div class="menu__shop">
-                <div class="shop-title">
-                    <h1 class="shop-title__text">Le délice des sens</h1>
-                    <div class="heart heart--menu">
-                        <i class="heart__outside far fa-heart"></i>
-                        <i class="heart__inside fas fa-heart"></i>
+        <main>
+            <section class="menu">
+                <img class="menu__img" src="img/resto/le-delice-des-sens.jpg" alt="palette-du-gout-img" />
+                <div class="menu__shop">
+                    <div class="shop-title">
+                        <h1 class="shop-title__text">Le délice des sens</h1>
+                        <div class="heart heart--menu">
+                            <i class="heart__outside far fa-heart"></i>
+                            <i class="heart__inside fas fa-heart"></i>
+                        </div>
                     </div>
+                    <div class="shop-group">
+                        <h2 class="shop-group__title">ENTRÉES</h2>
+                        <div class="shop-group__line"></div>
+                        <ul class="shop-group__list">
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Tartare de thon</h3>
+                                    <p class="shop-card__text-info">Assaisonné au yuzu</p>
+                                </div>
+                                <h4 class="shop-card__price bold">25€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Bouchée de homard croustillant</h3>
+                                    <p class="shop-card__text-info">Et sa farandole de petits légumes</p>
+                                </div>
+                                <h4 class="shop-card__price bold">35€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Velouté de cèpes</h3>
+                                    <p class="shop-card__text-info">Aux truffes</p>
+                                </div>
+                                <h4 class="shop-card__price bold">20€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="shop-group">
+                        <h2 class="shop-group__title">PLATS</h2>
+                        <div class="shop-group__line"></div>
+                        <ul class="shop-group__list">
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Poulet rôti aux herbes de Provence</h3>
+                                    <p class="shop-card__text-info">Et sa crème de truffe</p>
+                                </div>
+                                <h4 class="shop-card__price bold">40€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Langouste rôtie</h3>
+                                    <p class="shop-card__text-info">Et ses légumes de saison</p>
+                                </div>
+                                <h4 class="shop-card__price bold">35€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Côte de boeuf Angus</h3>
+                                    <p class="shop-card__text-info">Et sa purée de panais</p>
+                                </div>
+                                <h4 class="shop-card__price bold">44€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="shop-group">
+                        <h2 class="shop-group__title">DESSERTS</h2>
+                        <div class="shop-group__line"></div>
+                        <ul class="shop-group__list">
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Farandole de desserts</h3>
+                                    <p class="shop-card__text-info">Du chef</p>
+                                </div>
+                                <h4 class="shop-card__price bold">18€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Crème brulée</h3>
+                                    <p class="shop-card__text-info">Revisitée</p>
+                                </div>
+                                <h4 class="shop-card__price bold">22€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Tiramisu</h3>
+                                    <p class="shop-card__text-info">À la noisette</p>
+                                </div>
+                                <h4 class="shop-card__price bold">23€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <a class="btn btn--menu medium" href="#resto-anchor">Commander</a>
                 </div>
-                <div class="shop-group">
-                    <h2 class="shop-group__title">ENTRÉES</h2>
-                    <div class="shop-group__line"></div>
-                    <ul class="shop-group__list">
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Tartare de thon</h3>
-                                <p class="shop-card__text-info">Assaisonné au yuzu</p>
-                            </div>
-                            <h4 class="shop-card__price bold">25€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Bouchée de homard croustillant</h3>
-                                <p class="shop-card__text-info">Et sa farandole de petits légumes</p>
-                            </div>
-                            <h4 class="shop-card__price bold">35€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Velouté de cèpes</h3>
-                                <p class="shop-card__text-info">Aux truffes</p>
-                            </div>
-                            <h4 class="shop-card__price bold">20€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-group">
-                    <h2 class="shop-group__title">PLATS</h2>
-                    <div class="shop-group__line"></div>
-                    <ul class="shop-group__list">
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Poulet rôti aux herbes de Provence</h3>
-                                <p class="shop-card__text-info">Et sa crème de truffe</p>
-                            </div>
-                            <h4 class="shop-card__price bold">40€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Langouste rôtie</h3>
-                                <p class="shop-card__text-info">Et ses légumes de saison</p>
-                            </div>
-                            <h4 class="shop-card__price bold">35€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Côte de boeuf Angus</h3>
-                                <p class="shop-card__text-info">Et sa purée de panais</p>
-                            </div>
-                            <h4 class="shop-card__price bold">44€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-group">
-                    <h2 class="shop-group__title">DESSERTS</h2>
-                    <div class="shop-group__line"></div>
-                    <ul class="shop-group__list">
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Farandole de desserts</h3>
-                                <p class="shop-card__text-info">Du chef</p>
-                            </div>
-                            <h4 class="shop-card__price bold">18€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Crème brulée</h3>
-                                <p class="shop-card__text-info">Revisitée</p>
-                            </div>
-                            <h4 class="shop-card__price bold">22€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Tiramisu</h3>
-                                <p class="shop-card__text-info">À la noisette</p>
-                            </div>
-                            <h4 class="shop-card__price bold">23€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <a class="btn btn--menu medium" href="#resto-anchor">Commander</a>
-            </div>
-        </section>
+            </section>
+        </main>
 
         <footer class="footer">
             <img class="footer__logo" src="img/logo/logo-white.svg" alt="logo-ohmyfood" />
