--- a/menu-aLaFrancaise.html
+++ b/menu-aLaFrancaise.html
@@ -26,127 +26,129 @@
             <img class="header__logo" src="img/logo/logo.svg" alt="logo-ohmyfood" />
         </header>
 
-        <section class="menu">
-            <img class="menu__img" src="img/resto/a-la-francaise.jpg" alt="palette-du-gout-img" />
-            <div class="menu__shop">
-                <div class="shop-title">
-                    <h1 class="shop-title__text">À la française</h1>
-                    <div class="heart heart--menu">
-                        <i class="heart__outside far fa-heart"></i>
-                        <i class="heart__inside fas fa-heart"></i>
+        <main>
+            <section class="menu">
+                <img class="menu__img" src="img/resto/a-la-francaise.jpg" alt="palette-du-gout-img" />
+                <div class="menu__shop">
+                    <div class="shop-title">
+                        <h1 class="shop-title__text">À la française</h1>
+                        <div class="heart heart--menu">
+                            <i class="heart__outside far fa-heart"></i>
+                            <i class="heart__inside fas fa-heart"></i>
+                        </div>
                     </div>
+                    <div class="shop-group">
+                        <h2 class="shop-group__title">ENTRÉES</h2>
+                        <div class="shop-group__line"></div>
+                        <ul class="shop-group__list">
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Tartare de poulpe acidulé</h3>
+                                    <p class="shop-card__text-info">Aux zestes d'orange</p>
+                                </div>
+                                <h4 class="shop-card__price bold">25€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Velouté de légumes d'antan</h3>
+                                    <p class="shop-card__text-info">Carotte, panais, topinambour</p>
+                                </div>
+                                <h4 class="shop-card__price bold">35€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Soupe à l'oignon</h3>
+                                    <p class="shop-card__text-info">Revisitée</p>
+                                </div>
+                                <h4 class="shop-card__price bold">20€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="shop-group">
+                        <h2 class="shop-group__title">PLATS</h2>
+                        <div class="shop-group__line"></div>
+                        <ul class="shop-group__list">
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Coquilles Saint-Jacques</h3>
+                                    <p class="shop-card__text-info">Accompagnées d'une purée de panais</p>
+                                </div>
+                                <h4 class="shop-card__price bold">40€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Magret de canard</h3>
+                                    <p class="shop-card__text-info">Et parmentier de pommes de terre</p>
+                                </div>
+                                <h4 class="shop-card__price bold">35€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Pigeonneau d’Ille-et-Vilaine</h3>
+                                    <p class="shop-card__text-info">Sur son lit de gnocchis aux légumes</p>
+                                </div>
+                                <h4 class="shop-card__price bold">44€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="shop-group">
+                        <h2 class="shop-group__title">DESSERTS</h2>
+                        <div class="shop-group__line"></div>
+                        <ul class="shop-group__list">
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Pétales de violettes glacés</h3>
+                                    <p class="shop-card__text-info">Et purée de noisettes</p>
+                                </div>
+                                <h4 class="shop-card__price bold">18€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Fondant au chocolat</h3>
+                                    <p class="shop-card__text-info">Revisité</p>
+                                </div>
+                                <h4 class="shop-card__price bold">22€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                            <li class="shop-card">
+                                <div class="shop-card__text">
+                                    <h3 class="shop-card__text-title bold">Millefeuille croustillant</h3>
+                                    <p class="shop-card__text-info">Myrtilles et pâte d’amande</p>
+                                </div>
+                                <h4 class="shop-card__price bold">23€</h4>
+                                <div class="shop-card__check">
+                                    <i class="shop-card__check-icon fas fa-check-circle"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <a class="btn btn--menu medium" href="#resto-anchor">Commander</a>
                 </div>
-                <div class="shop-group">
-                    <h2 class="shop-group__title">ENTRÉES</h2>
-                    <div class="shop-group__line"></div>
-                    <ul class="shop-group__list">
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Tartare de poulpe acidulé</h3>
-                                <p class="shop-card__text-info">Aux zestes d'orange</p>
-                            </div>
-                            <h4 class="shop-card__price bold">25€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Velouté de légumes d'antan</h3>
-                                <p class="shop-card__text-info">Carotte, panais, topinambour</p>
-                            </div>
-                            <h4 class="shop-card__price bold">35€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Soupe à l'oignon</h3>
-                                <p class="shop-card__text-info">Revisitée</p>
-                            </div>
-                            <h4 class="shop-card__price bold">20€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-group">
-                    <h2 class="shop-group__title">PLATS</h2>
-                    <div class="shop-group__line"></div>
-                    <ul class="shop-group__list">
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Coquilles Saint-Jacques</h3>
-                                <p class="shop-card__text-info">Accompagnées d'une purée de panais</p>
-                            </div>
-                            <h4 class="shop-card__price bold">40€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Magret de canard</h3>
-                                <p class="shop-card__text-info">Et parmentier de pommes de terre</p>
-                            </div>
-                            <h4 class="shop-card__price bold">35€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Pigeonneau d’Ille-et-Vilaine</h3>
-                                <p class="shop-card__text-info">Sur son lit de gnocchis aux légumes</p>
-                            </div>
-                            <h4 class="shop-card__price bold">44€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="shop-group">
-                    <h2 class="shop-group__title">DESSERTS</h2>
-                    <div class="shop-group__line"></div>
-                    <ul class="shop-group__list">
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Pétales de violettes glacés</h3>
-                                <p class="shop-card__text-info">Et purée de noisettes</p>
-                            </div>
-                            <h4 class="shop-card__price bold">18€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Fondant au chocolat</h3>
-                                <p class="shop-card__text-info">Revisité</p>
-                            </div>
-                            <h4 class="shop-card__price bold">22€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                        <li class="shop-card">
-                            <div class="shop-card__text">
-                                <h3 class="shop-card__text-title bold">Millefeuille croustillant</h3>
-                                <p class="shop-card__text-info">Myrtilles et pâte d’amande</p>
-                            </div>
-                            <h4 class="shop-card__price bold">23€</h4>
-                            <div class="shop-card__check">
-                                <i class="shop-card__check-icon fas fa-check-circle"></i>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <a class="btn btn--menu medium" href="#resto-anchor">Commander</a>
-            </div>
-        </section>
+            </section>
+        </main>
 
         <footer class="footer">
             <img class="footer__logo" src="img/logo/logo-white.svg" alt="logo-ohmyfood" />
